# biurs

./: Cargo.toml  README.md  tea .yaml
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml  build.rs
core/proto/: service.proto
core/src/: client.rs  lib.rs  server.rs
core/src/proto/: mod.rs
core/src/types/: auth.rs  download.rs  list.rs  mod.rs  status.rs  upload.rs
server/: Cargo.toml
server/src/: main.rs
