[workspace]
members = [
    "core",
    "server",
    "client",
]

[workspace.dependencies]
biurs-core = { version = "0.2.0", path = "core" }

anyhow = "1.0.72"
async-trait = "0.1.73"
clap = { version = "4.2.21", features = ["derive"] }
directories = "5.0.1"
filetime = "0.2.22"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
prost = "0.11.9"
prost-types = "0.11.9"
rand = "0.8.5"
ring = "0.16.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
