[workspace]
members = ["core", "server", "client"]
resolver = "2"

[workspace.dependencies]
biurs-core = { version = "0.2.2", path = "core" }

anyhow = "1.0.95"
async-trait = "0.1.85"
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0.0"
filetime = "0.2.25"
futures = "0.3.31"
futures-core = "0.3.31"
fxhash = "0.2.1"
jsonwebtoken = "9.3.0"
prost = "0.13.4"
prost-types = "0.13.4"
rand = "0.9.0"
ring = "0.17.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
