[package]
name = "biurs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "biurs client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
biurs-core = { version = "0.1.0", path = "../core" }
clap = { version = "4.2.7", features = ["derive"] }
directories = "5.0.1"
filetime = "0.2.21"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
