[package]
name = "biurs-core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.9.2"

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["sync", "fs"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
