[package]
name = "biurs-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "core library for biurs"

[build-dependencies]
tonic-build = "0.9.2"

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["sync", "fs"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tracing = "0.1.37"
