[package]
name = "biurs-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "core library for biurs"

[build-dependencies]
tonic-build = "0.9.2"

[dependencies]
async-trait.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
