[package]
name = "biurs-server"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "biurs server"
readme = "../README.md"
homepage = "https://github.com/cemoktra/biurs"
repository = "https://github.com/cemoktra/biurs"
keywords = ["backup", "restore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
biurs-core = { version = "0.2.0", path = "../core" }
clap = { version = "4.2.7", features = ["derive"] }
directories = "5.0.1"
filetime = "0.2.21"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
ring = "0.16.20"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["fs", "rt-multi-thread"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
