[package]
name = "biurs-server"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "biurs server"
readme = "../README.md"
homepage = "https://github.com/cemoktra/biurs"
repository = "https://github.com/cemoktra/biurs"
keywords = ["backup", "restore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
biurs-core.workspace = true
clap.workspace = true
directories.workspace = true
filetime.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
ring.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
